# agenda

./: CMakeLists.txt  Messages.sh  README.md  org.kde.agenda.appdata.xml
.github/workflows/: build-deb-amd64.yml
app/: CMakeLists.txt
app/data/: project.appdata.xml  project.desktop
app/src/: CMakeLists.txt
app/src/code/: main.cpp
app/src/controls/: main.qml
plugin/: CMakeLists.txt
plugin/code/: plugin.cpp  plugin.h
plugin/controls/: DayGridView.qml  DayLabelsBar.qml  EventPage.qml  Month.qml  MonthView.qml  YearView.qml  qml.qrc
scripts/: build-deb.sh  install-build-deps.sh
src/: CMakeLists.txt
src/code/: main.cpp
src/controls/: main.qml
